# mini_bot_description

./: .gitignore  package.xml  setup.py
launch/: display.launch.py
meshes/: mini_bot_structure.stl  mini_bot_wheel.stl
rviz/: mini_bot.rviz
urdf/: mini_bot.urdf
