<?xml version="1.0"?>
<package format="3">
  <name>mini_bot_description</name>
  <version>0.0.1</version>
  <description>URDF and meshes for MiniBot</description>
  <maintainer email="narcispr@gmail.com">Narcis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <build_depend>launch_ros</build_depend>
  <build_export_depend>launch_ros</build_export_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
